# FractalFlowers

./: .gitignore  CMakeLists.txt  main.cpp
header/: flower.h  garden.h  leaf.h  mainwindow.h  plant.h  stem.h
src/: flower.cpp  garden.cpp  leaf.cpp  mainwindow.cpp  plant.cpp  stem.cpp
